# twitter_clone

./: pyproject.toml
twitter_clone/: pyproject.toml
twitter_clone/socialmedia/: asgi.py  settings.py  urls.py  wsgi.py
twitter_clone/twitter/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
twitter_clone/twitter/migrations/: 0001_initial.py  0002_profile_date_modified.py  0003_tweet.py  0004_profile_profile_image.py  0005_tweet_likes.py  0006_profile_homepage_link_profile_instagram_link_and_more.py
twitter_clone/twitter/templates/: base.html  followers.html  follows.html  home.html  login.html  navbar.html  profile.html  profile_list.html  register.html  search.html  search_user.html  tweet_share.html  update_user.html
